# fastAPI

./: .dockerignore  Dockerfile  alembic.ini  main.py  pyproject.toml
.circleci/: config.yml
alembic/versions/: 00b4614e7e9a_.py  3220334ec71b_.py  38beb666d9f7_moving_is_active_to_user.py  3af28fcaacf0_.py  62b0f04229d5_.py
api/: courses.py  sections.py  users.py
api/utils/: courses.py  users.py
db/: db_setup.py
db/models/: course.py  mixins.py  user.py
pydantic_schemas/: course.py
